@@ -1,3 +1,15 @@
+2018-03-29  Chris Dumez  <cdumez@apple.com>
+
+        Drop DOMWindow::frames() / DOMWindow::window() methods
+        https://bugs.webkit.org/show_bug.cgi?id=184112
+
+        Reviewed by Daniel Bates.
+
+        Drop DOMWindow::frames() / DOMWindow::window() methods as they are just aliases for DOMWindow::self().
+
+        * page/DOMWindow.h:
+        * page/DOMWindow.idl:
+
 2018-03-29  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r230062.
